--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="model">
-        <model-viewer id= "mod" src="test.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls max-camera-orbit= "calc(30deg - env(window-scroll-y) * 60deg) 75deg auto"></model-viewer>
+        <model-viewer id= "mod" src="gltf/silla02.gltf" alt="A 3D model of an astronaut" auto-rotate camera-controls max-camera-orbit= "calc(30deg - env(window-scroll-y) * 60deg) 75deg auto"></model-viewer>
     </div>
 </body>
 
