--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
-<html>
+<html lang="en">
 <head>
-
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-<link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <div id="model">
-        <model-viewer id= "mod" src="gltf/silla02.gltf" alt="A 3D model of an astronaut" auto-rotate camera-controls max-camera-orbit= "calc(30deg - env(window-scroll-y) * 60deg) 75deg auto"></model-viewer>
-    </div>
+    
+    <img src="logo.png" id= "logo" width="100%" height="100%">
+
+
+<script>
+
+    let img = document.querySelector("logo");
+
+    document.addEventListener("click", () =>{
+        window.location = "./roses";
+    })
+
+</script>
+
 </body>
-
-
-
+</html>
