--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+<link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     
-    <img src="logo.png" id= "logo" width="100%" height="100%">
+    <img src="logo.png" id="logo" >
 
+    <button onclick="changeFile()" id="button">Siguiente</button>  
+    <div id="model">
+        <model-viewer id= "mod" src="gltf/cats.gltf" auto-rotate camera-controls max-camera-orbit= "calc(60deg - env(window-scroll-y) * 60deg) 90deg auto"></model-viewer>
+    </div>
 
-<script>
+    <script>
 
-    let img = document.querySelector("logo");
+        let files = ['cats', 'roses'] 
+        let next = 0;
 
-    document.addEventListener("click", () =>{
-        window.location = "./roses";
-    })
+        function changeFile() {
+            console.log(files.length);
 
-</script>
+            if(next < files.length-1) {next =+ 1}
+            else{next = 0};
 
+            document.getElementById("mod").src = `gltf/${files[next]}.gltf`;           }
+
+    </script>
 </body>
-</html>
+
+
+
+
+
