--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     
-    <img src="logo.png" id="logo" >
+    <img src="img/logo.png" id="logo" >
 
     <button onclick="changeFile()" id="button">Siguiente</button>  
     <div id="model">
